# slint-template

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  noxfile.py  pyproject.toml
data/config/: config.cue
src/: __main__.py  app.py  config.py  model.py  ui.slint
tests/: test_model.py
